# AudioToText

./: .gitignore  README.md  README.old.md  audiototext.py  main.py  pyproject.toml
